# etpm

./: .gitignore  Cargo.toml  README.md  etpm.h  example.c
examples/: download.rs  read_addition.rs  uninstall.rs  update.rs
src/: error.rs  fetcher.rs  ffi.rs  lib.rs  unpack.rs
tests/: signature_test.rs
