[package]
name = "etpm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
flate2 = "1.1.9"
futures-util = "0.3.32"
reqwest = { version = "0.13.4", features = ["blocking", "json", "stream"] }
ron = "0.12.1"
semver = "1.0.28"
serde = { version = "1.0.228", features = ["derive"] }
tar = "0.4.46"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
url = "2.5.8"

[dev-dependencies]
tempfile = "3.27.0"
